Removed getFirst() method calls for backport compatibility